fixed buttons and spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,55 +1,98 @@
 :root {
-  --poppins-font-fam: "Poppins", sans-serif;
-  --playfair-font-fam: "Playfair Display", serif;
-  --primary-purple: #6c63ff;
-  --secondary-black: #272142;
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
+
+body {
+  font-family: var(--default-font-family);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 96px;
+  line-height: 1.5;
+}
+
+h2 {
+  font-size: 64px;
+}
+
+p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+}
+
 .hero {
-  background-color: #f9f7fe;
+  background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
 }
-.hero h1 {
-  color: black;
-  font-family: var(--playfair-font-fam);
-  font-weight: bold;
-  font-size: 96px;
-}
-.hero h2 {
-  font-family: var(--poppins-font-fam);
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 2;
-}
+
 .hero p {
-  font-family: var(--poppins-font-fam);
   font-size: 36px;
   font-weight: bold;
   margin: 0;
-  color: var(--secondary-black);
+  color: #272142;
+}
+
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
   line-height: 1.5;
+  font-size: 24px;
 }
-.container h2 {
-  font-family: var(--playfair-font-fam);
-  font-size: 64px;
-}
-.container p {
-  font-family: var(--poppins-font-fam);
-  font-size: 16px;
-}
+
 .btn-branding {
-  background: var(--primary-purple);
+  background: var(--branding-color);
   border-radius: 4px;
   color: white;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
 }
-.btn-outline-branding {
-  border: 1px solid var(--primary-purple);
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
   border-radius: 4px;
-  color: var(--primary-purple);
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.project-desciption {
+  padding: 120px 60px;
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 2;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
+
+  .hero {
+    padding: 80px 20px;
+  }
+
+  .project-desciption {
+    padding: 0;
+    text-align: center;
+  }
 }
